--- a/css/style.css
+++ b/css/style.css
@@ -409,7 +409,6 @@ header {
     margin: 0 auto;
     padding: 3em;
     z-index: 5;
-    border: 2px solid red;
 }
 
 .about-me::before,
@@ -589,10 +588,8 @@ header {
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
-
-
+}
+}
 
 /* Continue video here: https://youtu.be/_xkSvufmjEs?t=5365 */
-/* adobe file here: https://xd.adobe.com/spec/6ebfeb86-6eeb-4b69-77dc-ecf4c4506bcc-188e/grid */
-
-
+/* adobe file here: https://xd.adobe.com/spec/6ebfeb86-6eeb-4b69-77dc-ecf4c4506bcc-188e/grid *?
