--- a/css/style.css
+++ b/css/style.css
@@ -411,12 +411,17 @@ header {
     }
 
     .tool h3 {
-        color: var(--clr-light)
+        color: var(--clr-accent2)
     }
 
     .tool img {
         max-height: 3em;
         filter: invert(1);
+        transition: transform 100ms ease-in;
+    }
+
+    .tool img:hover {
+        transform: scale(1.3);
     }
 
     #finale {
@@ -426,7 +431,7 @@ header {
     
     .my-tools::before {
         content: '';
-        background-image:  url(../img/keyboard.jpg);
+        background-image:  url(../img/backgrnds/keyboard.jpg);
         background-color: var(--clr-dark);
         background-blend-mode: multiply;
         background-size: cover;
@@ -555,11 +560,15 @@ header {
 .my-work {
     position: relative;
     background-color: var(--clr-dark);
-    background-image: url(../img/chalkboard.jpg);
+    background-image: url(../img/backgrnds/chalkboard.jpg);
     background-size: cover;
     background-blend-mode: darken;
+    background-attachment: fixed;
     color: var(--clr-light);
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .section__subtitle--mywork {
@@ -568,14 +577,22 @@ header {
 }
 
 .portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 3em;
 }
 
 .portfolio__item {
     background: var(--clr-accent);
     overflow: hidden;
+    max-width: fit-content;
+    text-justify: center;
+    display: flex;
+    justify-content: center;
 }
+
 
 .portfolio__img {
     max-height: min-content;
@@ -588,6 +605,28 @@ header {
     transform:scale(1.2);
     opacity: .75;
 }
+
+
+.portfolio__item img {
+    height: 300px;
+}
+
+
+.port_item_text {
+    padding-top: 1em;
+    position: absolute;
+    color: white;
+    display: none;
+    z-index: 200;
+}
+
+.portfolio__item:hover > .port_item_text {
+    display: block;
+}
+
+
+
+
 
 
 /* Footer */
@@ -631,10 +670,33 @@ header {
 
 
 
+
+
+/* Portfolio pages */
+
+.intro-portfolio_page{
+    margin-bottom: -5em;
+}
+
+.portfolio__header-img {
+    right: 3em;
+    min-width: 33em;
+}
+
+#gn_header {
+    box-shadow: none;
+    bottom: 1em;
+    max-width: 500px;
+    right: 0;
+}
+
 .portfolio-item-individual {
-    padding: 0 2em 2em;
+    position: relative;
     max-width: 1000px;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
+    align-items: center;
 }
 
 .portfolio-item-individual p {
@@ -642,7 +704,7 @@ header {
     margin-left: auto;
     margin-right: auto;
 }
-}
 
-/* Continue video here: https://youtu.be/_xkSvufmjEs?t=5365 */
-/* adobe file here: https://xd.adobe.com/spec/6ebfeb86-6eeb-4b69-77dc-ecf4c4506bcc-188e/grid *?
+.video_prev {
+    max-width: 750px;
+}
