--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ header {
     color: var(--clr-light);
     top: 0;
     bottom: 0;
-    left: 70%;
+    left: 65%;
     right: 0;
     z-index: 100;
 
@@ -711,7 +711,7 @@ header {
 @media (max-width: 600px) {
     .portfolio__header-img {
         /* right: 3em; */
-        max-width: 25em;
+        max-width: 350px;
     }
     .portfolio-item-individual {
         position: relative;
