--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,7 @@ header {
     .intro {
         margin-left: auto;
         margin-right: auto;
+        margin-top: -2em;
         display: grid;
         width: min-content;
         height: auto;
@@ -449,7 +450,7 @@ header {
         width: 100%;
         left: 0;
         position: absolute;
-        top: -3em;
+        top: -3.5em;
         z-index: 2;
     }
     
@@ -581,6 +582,7 @@ header {
     justify-content: center;
     flex-wrap: wrap;
     gap: 3em;
+    margin-bottom: 4em;
 }
 
 .portfolio__item {
